# docker-instant-development

./: .gitignore  README.md  docker-compose.yml
c#/: Dockerfile  c#.sln  makefile
c#/TodoApi/: Program.cs
c#/TodoApi/Properties/: launchSettings.json
golang/: Dockerfile  go.mod  main.go  makefile
nodejs/: Dockerfile  app.js  makefile  package.json
python/: Dockerfile  gunicorn.conf.py  main.py  makefile  pyproject.toml  requirements.txt
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
