[tool.poetry]
name = "app-py"
version = "0.1.0"
description = ""
authors = ["singgihdwindaru <singgihlab@gmail.com>"]
readme = "README.md"
packages = [{include = "app_py"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
