[tool.poetry]
name = "app-py"
version = "0.1.0"
description = ""
authors = ["singgihdwindaru <singgihlab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.2"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
